--- a/DriverLicenseExemLearning-WebClient/package.json
+++ b/DriverLicenseExemLearning-WebClient/package.json
@@ -10,9 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
+    "jquery": "^3.7.0",
+    "jwt-decode": "^3.1.2",
+    "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "smooth-scroll": "^16.1.3",
+    "sweetalert2": "^11.7.32",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -22,6 +39,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
