--- a/driven-license-learning/package.json
+++ b/driven-license-learning/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
     "@nextui-org/react": "^2.1.13",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "bootstrap": "5.3.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
@@ -17,7 +22,12 @@
     "react": "^18",
     "react-bootstrap": "2.9.0",
     "react-dom": "^18",
-    "react-loading-skeleton": "^3.3.1"
+    "react-hook-form": "^7.47.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "redux-persist": "^6.0.0",
+    "swr": "2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
