--- a/driven-license-learning/package.json
+++ b/driven-license-learning/package.json
@@ -24,8 +24,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-multi-date-picker": "^4.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swr": "2.2.4"
   },
