--- a/driven-license-learning/package.json
+++ b/driven-license-learning/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^5.14.15",
     "@nextui-org/react": "^2.1.13",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tabler/icons": "^2.40.0",
+    "@tabler/icons-react": "^2.40.0",
     "axios": "^1.5.1",
     "bootstrap": "5.3.2",
     "emailjs-com": "^3.2.0",
