--- a/driven-license-learning/package.json
+++ b/driven-license-learning/package.json
@@ -19,11 +19,13 @@
     "axios": "^1.5.1",
     "bootstrap": "5.3.2",
     "emailjs-com": "^3.2.0",
+    "eslint-config-next": "^14.0.1",
     "framer-motion": "^10.16.4",
-    "next": "13.5.5",
-    "react": "^18",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
+    "react": "^18.2.0",
     "react-bootstrap": "2.9.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-loading-skeleton": "^3.3.1",
     "react-multi-date-picker": "^4.4.1",
@@ -39,7 +41,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5"
